@@ -1,85 +1,42 @@
-# Java EE 6 Advanced Training - REST Client
+# Java EE 6 Advanced Training - Domain
 
-Then you will refactor the domain model to follow JPA best practices
+JBoss Forge doesn't know how to generate inheritance or Embeddable. In this module you will refactor the domain model to follow JPA best practices introducing inheritance and embeddables.
 
-## Add JSON support in CDBook-Store
+# DOJO - Refactor Book and CD to inherit from Item
 
-* In the REST endpoints :
-* Replace all the `@Consumes("application/xml")` with `@Consumes({"application/xml","application/json"})`
-* Replace all the `@Produces("application/xml")` with `@Produces({"application/xml","application/json"})`
+## Refactor Book and CD to inherit from Item
 
-## Deploy the CDBook-Store application on WildFly
+* `Item` should define the inheritance `@Inheritance(strategy = InheritanceType.TABLE_PER_CLASS)`
+* `Item` attributes should be `protected` instead of `private`
+* `Book` and `CD` should `extends Item`
+* `Book` and `CD` should get rid of the duplicate attributes, getters and setters : `id`, `version`, `title`, `price`, `description` and `imageURL` ;
 
+## Refactor and execute the tests in a remote environment
+
+* Add `.addClass(Item.class)` to the Arquillian test `BookEndpointTest`, `CDEndpointTest`, `BookBeanTest` and `CDBeanTest`
 * Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
-* Make sure WildFly has enough memory `-Xms64m -Xmx1024m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true`
-* Go to the [admin console](http://localhost:9990/)
-* Deploy the `cdbookstore/target/cdbookstore.war` file in _Runtime -> Manage Deployments -> Add -> Enable_
+* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
 
-## Check the REST interfaces with PostMan
+# DOJO - Address and CreditCard should be embeddables
 
-* Install Postman REST Client from the Chrome store 
-* Do CRUD operations on the REST interfaces using Postman REST Client
- 
-## Generate the new project CDBook-Client with JBoss Forge
+## Address and CreditCard should be embeddables
 
-* Launch JBoss Forge (enter the `$FORGE_HOME/bin/forge` command)
-* Execute the `generate.fsh` script with the command `run ../before/01-Forge/generate.fsh` 
-* Go to the `cdbookclient` directory
+* `Address` and `CreditCard` should be `@Embeddable` instead of an `@Entity` (get rid of `id` and `version`, its getters and `hashcode`)
+* A `Customer` has an `@Embedded` home address that needs to be `@Valid` (`@Embedded @Valid private Address homeAddress = new Address();`)
+* A `PurchaseOrder` has an `@Embedded` delivery address that needs to be `@Valid` (`@Embedded @Valid private Address deliveryAddress = new Address();`)
+* A `PurchaseOrder` has an `@Embedded` credit card that needs to be `@Valid` (`@Embedded @Valid private CreditCard creditCard = new CreditCard();`)
+* `Customer` and `PurchaseOrder` should get rid of the duplicate attributes of `Address` : `street1`, `street2`, `city`, `state` ,`zipcode` and `country` 
+* `PurchaseOrder` should get rid of the duplicate attributes of `CreditCard` : `creditCardNumber`, `creditCardType` and `creditCardExpDate` 
+* Refactor getters `public String getStreet1() { return homeAddress.getStreet1(); }`
+* Refactor setters `public void setState(String state) { this.homeAddress.setState(state); }`
+* Refactory `toString` `if (homeAddress.getStreet1() != null && !homeAddress.getStreet1().trim().isEmpty()) result += ", street1: " + homeAddress.getStreet1();`
 
-## Add a Maven exec plugin
+## Refactor and execute the tests in a remote environment
 
-* In order to execute the generated `Main` class with Maven, add the following to the `pom.xml`
+* Add `.addClass(Address.class)` to the Arquillian test `CustomerEndpointTest`, `CustomerBeanTest`  and `PurchaseOrderBeanTest`
+* Add `.addClass(CreditCard.class)` to the Arquillian test `PurchaseOrderBeanTest`
+* Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
+* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
 
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.3.1</version>
-        <executions>
-          <execution>
-            <id>rest-client</id>
-            <phase>install</phase>
-            <goals>
-              <goal>java</goal>
-            </goals>
-            <configuration>
-              <mainClass>org.agoncal.training.javaee6adv.client.Main</mainClass>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-    
-* Run `mvn install` and make sure the `Main` class is executed
-    
-## Invoke the CD-Book Store REST Services with the Main class
 
-### Get all the books
-    
-* In the `Main` create a method that returns all the Books in JSON
-* Method `private static void findAllBooks()`
-* `Response response = target.request(MediaType.APPLICATION_JSON).get();`
-
-### Create a book
-
-* In the `Main` create a method that creates one book given some JSON
-* Method `private static void createBook()`
-* Create this JSon String with `Json.createObjectBuilder()` = `String json = "{\"title\":\"Dummy Title\",\"price\":29.99,\"description\":\"Dummy Description\",\"isbn\":\"1430258489\",\"nbOfPages\":240,\"publicationDate\":\"2013-06-26\"}";`
-* `Response response = target.request(MediaType.APPLICATION_JSON).post(Entity.json(json.toString()));`
-* Display the location `System.out.println(response.getLocation());`
-
-## Find a book given an id
-
-* In the `Main` create a method that returns a book in JSON given an id
-* Method `private static void findBookById(String id)`
-
-### Remove a book given an id
-
-* In the `Main` create a method that creates one book given some JSON
-* Method `private static void removeBookById(String id)`
-* Display the status `System.out.println(response.getLocation());`
-
-## Execute the CDBook-Client application
-
-* While CDBook-Store is up and running, run `mvn install` and make sure the `Main` class is executed
 
